# makefmt

./: Cargo.toml  Makefile  dprint.json
features/: empty-lines.feature  indentation.feature
src/: error.rs  main.rs  makefile.rs
src/fixes/: double_empty_lines.rs  mod.rs
tests/: cucumber.rs
