[package]
name = "makefmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.6.0", default-features = false, features = ["std"] }

[dev-dependencies]
cucumber = "0.14"
pretty = { package = "pretty_assertions", version = "1.3.0" }
tempfile = "3"
tokio = { version = "1.21.2", features = ["fs", "io-util", "macros", "process", "rt"] }

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest
test = false # don't run this as part of "cargo test"
